--- a/mapping_microservice/docker-compose.yaml
+++ b/mapping_microservice/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
     container_name: mapping_microservice_backend
     environment:
       - CHOKIDAR_USEPOLLING=true
+      - PORT=3001
     ports:
       - 3001:3001
     volumes:
