--- a/order_microservice/docker-compose.yaml
+++ b/order_microservice/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
   app:
     build: .
     entrypoint: ./.docker/entrypoint.sh
-    container_name: orders_microservice_app
+    container_name: order_microservice_app
     environment:
       - CHOKIDAR_USEPOLLING=true
     ports:
@@ -19,7 +19,7 @@ services:
   db:
     image: mysql:5.7
     command: --innodb-use-native-aio=0
-    container_name: orders_microservice_db
+    container_name: order_microservice_db
     restart: always
     tty: true
     ports:
