--- a/order_microservice/package.json
+++ b/order_microservice/package.json
@@ -27,7 +27,10 @@
     "@nestjs/config": "^0.2.4",
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/platform-socket.io": "^7.0.7",
     "@nestjs/typeorm": "^6.3.3",
+    "@nestjs/websockets": "^7.0.7",
+    "@types/socket.io": "^2.1.4",
     "amqplib": "^0.5.5",
     "commander": "^4.1.1",
     "express-handlebars": "^3.1.0",
@@ -38,6 +41,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "typeorm": "^0.2.24"
   },
   "devDependencies": {
